--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        class="com.hfad.workout.WorkoutListFragment"
-        android:id="@+id/list_frag"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation=""
+              android:layout_width=""
+              android:layout_height="">
+     
+              
+              
+              
+              
+              
+</LinearLayout>
 
