--- a/app/src/main/res/layout/fragment_workout_detail.xml
+++ b/app/src/main/res/layout/fragment_workout_detail.xml
@@ -5,15 +5,15 @@
     android:orientation="vertical">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width=""
+        android:layout_height=""
+        android:textAppearance=""
         android:text=""
-        android:id="@+id/textTitle" />
+        android:id="" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width=""
+        android:layout_height=""
         android:text=""
-        android:id="@+id/textDescription" />
+        android:id="" />
 </LinearLayout>
